<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>z1_description</name>
  <version>0.0.0</version>
  <description>URDF and meshes file for the Unitree Z1 manipulator</description>
  <maintainer email="matteodv99tn@gmail.com">Matteo Dalle Vedove</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
