<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>z1_examples</name>
  <version>0.0.0</version>
  <description>Scripts and example for using the Unitree Z1 manipulator </description>
  <maintainer email="matteodv99tn@gmail.com">Matteo Dalle Vedove</maintainer>
  <license>Apache License 2.0</license>

  <depend>z1_bringup</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>trajectory_msgs</depend>
  <depend>control_msgs</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
